--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1,3 +1,9 @@
 User: User
 ID: ID
 Email: Email
+Roles: Roles
+security.login.title: Please login
+security.login.username: Username
+security.login.password: Password
+security.login.remember_me: Remember me
+security.login.submit: Submit
